# creatorops

./: .env.example  .gitignore  .mise.toml  .oxlintrc.json  .prettierignore  CLAUDE.md  PLAN.md  README.md  codecov.yml  eslint.config.js  package-lock.json  package.json  renovate.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  settings.local.json
.github/: copilot-instructions.md
.github/actions/setup-tauri/: action.yml
.github/workflows/: ci-frontend.yml  ci-rust.yml  release.yml
plans/: client-view.md  gd-integration.md  lightroom.md  rust-refactoring-plan.md
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: .clippy.toml  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  progress.rs  state.rs
src-tauri/src/modules/: archive.rs  backup.rs  client.rs  db.rs  delivery.rs  file_copy.rs  file_system.rs  file_utils.rs  google_drive.rs  import_history.rs  mod.rs  project.rs  sd_card.rs
src-tauri/src/utils/: file_ops.rs
src-tauri/tests/: integration_state.rs
src/components/: BackupQueue.test.tsx  BackupQueue.tsx  ClientSelector.test.tsx  ClientSelector.tsx  Clients.test.tsx  Clients.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CreateClient.test.tsx  CreateClient.tsx  CreateProject.test.tsx  CreateProject.tsx  Dashboard.test.tsx  Dashboard.tsx  DatePicker.test.tsx  DatePicker.tsx  Delivery.test.tsx  Delivery.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  History.test.tsx  History.tsx  Import.test.tsx  Import.tsx  KeyboardShortcutsHelp.test.tsx  KeyboardShortcutsHelp.tsx  Layout.test.tsx  Layout.tsx  NotificationToast.test.tsx  NotificationToast.tsx  Projects.test.tsx  Projects.tsx  Settings.test.tsx  Settings.tsx
src/contexts/: NotificationContext.test.tsx  NotificationContext.tsx  notification-context.ts
src/hooks/: useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useNotification.test.ts  useNotification.ts  useSDCardScanner.test.ts  useSDCardScanner.ts  useTheme.test.ts  useTheme.ts
src/styles/: components.css  global.css  history.css  keyboard-shortcuts.css  modern.css  notifications.css  variables.css
src/styles/layouts/: main-layout.css
src/test/: setup.ts
src/types/: index.ts
src/utils/: deliveryDestinations.test.ts  deliveryDestinations.ts  formatting.test.ts  formatting.ts  project.test.ts  project.ts
