[package]
name = "creatorops"
version = "0.1.0"
description = "Photography workflow management app"
authors = ["Marcin Skalski <marcin.skalski@konghq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "creatorops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-notification = "2.0.0-rc.5"
tauri-plugin-dialog = "2.0.0-rc.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.43.0", features = ["full"] }
tokio-retry = "0.3"
tokio-util = "0.7"
futures = "0.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
libc = "0.2"
sha2 = "0.10"
chrono = "0.4"
lazy_static = "1.5"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"
