[package]
name = "creatorops"
version = "0.1.0"
description = "Photography workflow management app"
authors = ["Marcin Skalski <marcin.skalski@konghq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "creatorops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-notification = "2.0.0-rc.5"
tauri-plugin-dialog = "2.0.0-rc.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.43.0", features = ["full"] }
tokio-retry = "0.3"
tokio-util = "0.7"
futures = "0.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
libc = "0.2"
sha2 = "0.10"
chrono = "0.4"
lazy_static = "1.5"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.38", features = ["bundled"] }
google-drive3 = "7.0.0"
yup-oauth2 = "12"
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-rustls = "0.27"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
keyring = "3.0"
rand = "0.9"
base64 = "0.22"
urlencoding = "2.1"
aes-gcm = "0.10"
argon2 = "0.5"
reqwest = { version = "0.13", features = ["json", "query", "form"] }
dotenvy = "0.15"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
# Core groups - lower priority to allow individual lint overrides
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction lints - cherry-picked for safety
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "allow" # False positives in Tauri commands with Result return types
wildcard_imports = "allow" # Tauri macros use wildcard imports

# Additional quality lints
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
exit = "deny"
lossy_float_literal = "deny"
rest_pat_in_fully_bound_structs = "deny"
str_to_string = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
